# Final-term-project-Discrete-mathematics-and-graph-theory

./: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  project.pro  run.bat  setup_and_build.bat  setup_and_build.ps1
release/: moc_GraphCanvas.cpp  moc_MainWindow.cpp  moc_predefs.h
src/: Algorithms.cpp  Algorithms.h  ChinesePostman.cpp  ChinesePostman.h  Graph.cpp  Graph.h  GraphCanvas.cpp  GraphCanvas.h  MainWindow.cpp  MainWindow.h  main.cpp
test case/: test case 2.txt
